# brasscoders

./: .bandit  .brassignore  .gitignore  .pylintrc  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  NOTICE  README.md  SECURITY.md  pyproject.toml  pytest.ini  requirements-dev.txt  setup.py
.github/: secret_scanning.yml
docs/: CACHE.md  CI.md  CLI_USER_GUIDE.md  DATA_HANDLING.md  PRIVACY_POLICY.md  QUICKSTART.md  README.md
docs/developer-guide/: ADDING_NEW_SCANNERS.md  ARCHITECTURAL_PRINCIPLES.md  EVIDENCE_BASED_DEVELOPMENT_PROCESS.md  LANGUAGE_SUPPORT.md  TESTING_STRATEGY.md
docs/output/: AI_INSTRUCTIONS_CANONICAL_SHAPE.md
scripts/: benchmark.py  benchmark_real_projects.py
src/: __init__.py
src/brass/: __init__.py
src/brass/cli/: __init__.py  brass_cli.py
src/brass/config/: patterns.yaml
src/brass/core/: __init__.py  atomic_writer.py  brassignore.py  change_detection.py  error_handling.py  error_reporter.py  file_classifier.py  file_index.py  file_integrity.py  finding_cache.py  framework_registry.py  logging_config.py  path_safety.py  scanner_status.py  startup_checks.py  state_validator.py  user_error_handler.py  version_check.py
src/brass/enrichment/: __init__.py  _token_budget.py  _wire_clamp.py  client.py  filter.py  project_signature.py
src/brass/filtering/: __init__.py  ai_review_filter.py
src/brass/js_analysis/: babel_parser.js  package-lock.json  package.json
src/brass/licensing/: __init__.py  lemonsqueezy.py  store.py
src/brass/models/: __init__.py  finding.py
src/brass/monitoring/: __init__.py  file_watcher.py
src/brass/output/: __init__.py  cross_scanner_overlap.py  output_generator.py  redaction_checker.py  yaml_output_generator.py  yaml_output_generator_v2.py
src/brass/ranking/: __init__.py  intelligence_ranker.py
src/brass/scanners/: __init__.py  _known_test_values.py  ai_context_coherence_scanner.py  api_security_scanner.py  ast_grep_scanner.py  brass2_privacy_scanner.py  brass_performance_scanner.py  content_moderation_scanner.py  file_prefilter_scanner.py  javascript_typescript_scanner.py  noise_reduction_scanner.py  phantom_ai_code_scanner.py  professional_code_scanner.py  pysa_taint_scanner.py  secrets_scanner.py  (+1 more)
tests/: __init__.py  conftest.py  simple_test_runner.py
tests/benchmarks/: .gitignore  clone.sh
tests/end_to_end/: README.md  __init__.py  test_critical_completeness.py  test_external_benchmarks.py  test_output_quality.py  test_pysa_integration.py  test_whisperx_local.py
tests/fixtures/: README.md  __init__.py  code_quality_test_files.py  fixture_manager.py  privacy_test_files.py  test_project.py
tests/integration/: README.md  __init__.py  test_basic_workflow.py  test_brass2_privacy_scanner_integration.py  test_brassperf_cli_integration.py  test_component_boundaries.py  test_full_system.py  test_scanner_interactions.py  test_system_integrity.py
tests/performance/: README.md  __init__.py  benchmark_fixtures.py  benchmark_runner.py  test_end_to_end_performance.py  test_scanner_performance.py
tests/unit/: test_ai_review_filter.py  test_ast_grep_scanner.py  test_benchmark_compare.py  test_brass_performance_scanner.py  test_brassignore.py  test_c8_xss_and_consolidation.py  test_cache_clear_cli.py  test_code_scanner.py  test_content_moderation_scanner.py  test_cross_scanner_overlap.py  test_enrichment_client.py  test_enrichment_filter.py  test_error_handling.py  test_file_classifier_phase_c5.py  test_file_index.py  test_finding_interface.py  test_framework_registry.py  test_intelligence_ranker.py  test_javascript_typescript_scanner.py  test_js_hardcoded_password_ast.py  test_logging_config.py  test_noise_reduction_per_file_cap.py  test_output_generator.py  test_phantom_ai_code_scanner.py  test_phase4_licensing.py  test_phone_detection.py  test_privacy_deny_list.py  test_professional_code_scanner.py  test_professional_scanner.py  test_project_signature.py  test_pysa_taint_scanner.py  test_scanner_status.py  test_secrets_scanner_noise_filter.py  test_semgrep_taint_scanner.py  test_token_budget.py
(+73 files in other folders)
